<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>client</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>client</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <parent>
    <groupId>ru.mauveferret</groupId>
    <artifactId>ApparatusAutomatizer</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>
    <javafx.version>13</javafx.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.9</version>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scream3r</groupId>
      <artifactId>jssc</artifactId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.3</version>
        <configuration>
          <release>${maven.compiler.release}</release>

          <options>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
          </options>
          <mainClass>ru.mauveferret.Main</mainClass>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <includes>
            <include>/resources/*</include>
          </includes>
          <archive>
            <addMavenDescriptor>true</addMavenDescriptor>
            <compress>true</compress>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>libs/</classpathPrefix>
              <mainClass>ru.mauveferret.Main</mainClass>
            </manifest>
          </archive>
        </configuration>

      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.5.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/libs</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <mainClass>ru.mauveferret.Main</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>1.7.25</version>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>package</phase>
            <goals><goal>launch4j</goal></goals>
            <configuration>
              <headerType>gui</headerType>
              <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
              <outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
              <errTitle>some went wrong</errTitle>
              <classPath>
                <mainClass>ru.mauveferret.Main</mainClass>
                <addDependencies>true</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <jre>
                <minVersion>1.5.0</minVersion>
                <opts>
                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
                </opts>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>snapshot</txtFileVersion>
                <fileDescription>program for Mephist tokamak control</fileDescription>
                <copyright>mauveferret</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>txt product version</txtProductVersion>
                <productName>E-N-C-C</productName>
                <internalName>ccne</internalName>
                <originalFilename>mephist.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>copy-resources</id>
            <phase>compile</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>
                ${basedir}/target/resources
              </outputDirectory>
              <resources>
                <resource>
                  <directory>/resources</directory>
                  <filtering>true</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>
